# C2

./: .gitignore  LICENSE  README.md
CLI/: CLI.py
Client/: CMakeLists.txt  FernFlowerClient.cpp  FernFlowerClient.sln  FernFlowerClient.vcxproj  FernFlowerClient.vcxproj.filters  main.cpp
Client/Include/: agent.h  config.h  init.h  is_debugger_present.h  network_operations.h  persistance.h  shell.h  systeminfo.h  xor_data.h
Client/Source/: agent.cpp  init.cpp  is_debugger_present.cpp  network_operations.cpp  persistance.cpp  shell.cpp  systeminfo.cpp  xor_data.cpp
Client/tests/: CMakeLists.txt  main.cpp
Server/: FernC2.py  c2data.db  init_db.py  requirements.txt
Server/CoreC2/: CoreC2.py
Server/Listeners/: HttpListener.py
Server/Resources/: Listeners.py  Tasks.py  agents.py  results.py
Server/database/: c2data.db  dbconnection.py  init_db.py  schema.sql
Server/templates/: base.html  index.html
Server/tests/: tests_httpListener.py  tests_listeners.py
